--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -3,12 +3,143 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>gov.iti.jets</groupId>
   <artifactId>BodyCareProducts</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>BodyCareProducts</name>
   <url>http://maven.apache.org</url>
 
-  <dependencies>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+  
+	<dependencies>
+		<dependency>
+		  <groupId>jakarta.platform</groupId>
+		  <artifactId>jakarta.jakartaee-api</artifactId>
+		  <version>9.0.0</version>
+		  <scope>provided</scope>
+		</dependency>
 
-  </dependencies>
+		<dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>5.5.0.Final</version>
+		</dependency> 
+
+		<dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>8.0.28</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-cdi</artifactId>
+			<version>7.0.2.Final</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.mapstruct</groupId>
+		  <artifactId>mapstruct</artifactId>
+		  <version>1.4.2.Final</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>javax.el</groupId>
+		  <artifactId>javax.el-api</artifactId>
+		  <version>3.0.0</version>
+		  <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		  <groupId>jakarta.servlet.jsp.jstl</groupId>
+		  <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		  <version>2.0.0</version>
+		</dependency>
+
+		<dependency>
+		  <groupId>org.glassfish.web</groupId>
+		  <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		  <version>2.0.0</version>
+		</dependency>
+
+
+		<dependency>
+		  <groupId>org.apache.taglibs</groupId>
+		  <artifactId>taglibs-standard-spec</artifactId>
+		  <version>1.2.5</version>
+		</dependency>
+
+		<dependency>
+		  <groupId>org.apache.taglibs</groupId>
+		  <artifactId>taglibs-standard-impl</artifactId>
+		  <version>1.2.5</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>jakarta.json</groupId>
+		  <artifactId>jakarta.json-api</artifactId>
+		  <version>2.0.1</version>
+		</dependency>
+
+		<dependency>
+		  <groupId>org.glassfish</groupId>
+		  <artifactId>jakarta.json</artifactId>
+		  <version>2.0.1</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.2.4</version>
+		</dependency>
+
+		<dependency>
+		  <groupId>jakarta.websocket</groupId>
+		  <artifactId>jakarta.websocket-api</artifactId>
+		  <version>2.0.0</version>
+		</dependency>
+		
+	</dependencies>
+
+  <build>
+    <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+        <source>11</source>
+        <target>11</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <username>admin</username>
+          <password>admin</password>
+          <url>http://localhost:9797/manager/text</url>
+          <path>/skincareapp</path>
+          <username>admin</username>
+          <password>admin</password>
+        </configuration>
+      </plugin>
+
+    </plugins>
+</build>
 </project>
