--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-core</artifactId>
-		  <version>5.5.0.Final</version>
+		  <version>5.6.7.Final</version>
 		</dependency> 
 
 		<dependency>
@@ -33,7 +33,11 @@
 		  <artifactId>mysql-connector-java</artifactId>
 		  <version>8.0.28</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.4.29.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator-cdi</artifactId>
@@ -133,7 +137,7 @@
         <configuration>
           <username>admin</username>
           <password>admin</password>
-          <url>http://localhost:9797/manager/text</url>
+          <url>http://localhost:9090/manager/text</url>
           <path>/skincareapp</path>
           <username>admin</username>
           <password>admin</password>
