--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -23,21 +23,23 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>org.hibernate</groupId>
-		  <artifactId>hibernate-core</artifactId>
-		  <version>5.6.7.Final</version>
-		</dependency> 
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core-jakarta</artifactId>
+			<version>5.6.7.Final</version>
+		  </dependency>
+		  <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		  <dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 		<dependency>
 		  <groupId>mysql</groupId>
 		  <artifactId>mysql-connector-java</artifactId>
 		  <version>8.0.28</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.4.29.Final</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator-cdi</artifactId>
@@ -137,7 +139,7 @@
         <configuration>
           <username>admin</username>
           <password>admin</password>
-          <url>http://localhost:9090/manager/text</url>
+          <url>http://localhost:9797/manager/text</url>
           <path>/skincareapp</path>
           <username>admin</username>
           <password>admin</password>
