--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -11,5 +11,15 @@
     <url-pattern>/addproduct</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>LoginControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.LoginControllerServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginControllerServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
 
 </web-app>
