--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,18 @@
   </servlet>
 
   <servlet>
+    <servlet-name>LoginControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.LoginControllerServlet</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>CheckEmailAjaxServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.ajaxservlet.CheckEmailAjaxServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>LogoutControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.LogoutControllerServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -23,7 +33,7 @@
 
   <servlet-mapping>
     <servlet-name>RegisterUserControllerServlet</servlet-name>
-    <url-pattern>/registeruser</url-pattern>
+    <url-pattern>/register</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
@@ -31,14 +41,14 @@
     <url-pattern>/checkemail</url-pattern>
   </servlet-mapping>
 
-  <servlet>
-    <servlet-name>LogoutControllerServlet</servlet-name>
-    <servlet-class>gov.iti.jets.presentation.servlets.LogoutControllerServlet</servlet-class>
-  </servlet>
-
   <servlet-mapping>
     <servlet-name>LogoutControllerServlet</servlet-name>
     <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>LoginControllerServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
 
