--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
-                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0" metadata-complete="true">
-
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee" 
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" 
+        version="5.0" metadata-complete="true">
   <servlet>
     <servlet-name>AddProductServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.AddProductControllerServlet</servlet-class>
@@ -51,5 +53,7 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
-
+  <listener>
+    <listener-class> gov.iti.jets.presentation.listeners.MyAppListener </listener-class>
+</listener>
 </web-app>
