--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -107,6 +107,23 @@
 		  <artifactId>jakarta.websocket-api</artifactId>
 		  <version>2.0.0</version>
 		</dependency>
+
+		
+		<dependency>
+			<groupId>com.sun.activation</groupId>
+			<artifactId>javax.activation</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		
+		
+		
 		
 	</dependencies>
 
