--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,21 @@
     <servlet-class>gov.iti.jets.presentation.servlets.LogoutControllerServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>ForgetPasswordControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.ForgetPasswordControllerServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>ValidateOtpControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.ValidateOtpControllerServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>UpdatePasswordControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.UpdatePasswordControllerServlet</servlet-class>
+  </servlet>
+
   <servlet-mapping>
     <servlet-name>AddProductServlet</servlet-name>
     <url-pattern>/addproduct</url-pattern>
@@ -50,6 +65,20 @@
     <servlet-name>LoginControllerServlet</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>ForgetPasswordControllerServlet</servlet-name>
+    <url-pattern>/forgetpassword</url-pattern>
+  </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>ValidateOtpControllerServlet</servlet-name>
+    <url-pattern>/validateotp</url-pattern>
+  </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>UpdatePasswordControllerServlet</servlet-name>
+    <url-pattern>/updatepassword</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
