--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,11 @@
     <servlet-class>gov.iti.jets.presentation.servlets.LogoutControllerServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>ProductLoadControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.ProductLoadControllerServlet</servlet-class>
+  </servlet>
+
   <servlet-mapping>
     <servlet-name>AddProductServlet</servlet-name>
     <url-pattern>/addproduct</url-pattern>
@@ -74,6 +79,11 @@
     <url-pattern>/addcategory</url-pattern>
   </servlet-mapping>
 
+  
+  <servlet-mapping>
+    <servlet-name>ProductLoadControllerServlet</servlet-name>
+    <url-pattern>/products</url-pattern>
+  </servlet-mapping>
 
   <listener>
     <listener-class> gov.iti.jets.presentation.listeners.MyAppListener </listener-class>
