--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -107,7 +107,21 @@
 		  <artifactId>jakarta.websocket-api</artifactId>
 		  <version>2.0.0</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.5</version>
+		</dependency>
+
+
+
 	</dependencies>
 
   <build>
