--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
-                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" 
-        version="5.0" metadata-complete="true">
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+  version="5.0" metadata-complete="true">
   <servlet>
     <servlet-name>AddProductServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.AddProductControllerServlet</servlet-class>
@@ -50,6 +50,13 @@
 
   </servlet>
 
+  <servlet>
+
+    <servlet-name>AddProductToCartServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.AddProductToCartServlet</servlet-class>
+
+  </servlet>
+
   <servlet-mapping>
     <servlet-name>AddProductServlet</servlet-name>
     <url-pattern>/addproduct</url-pattern>
@@ -91,13 +98,21 @@
     <url-pattern>/addcategory</url-pattern>
   </servlet-mapping>
 
-  
+
   <servlet-mapping>
     <servlet-name>ProductLoadControllerServlet</servlet-name>
     <url-pattern>/products</url-pattern>
   </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>AddProductToCartServlet</servlet-name>
+    <url-pattern>/addproducttocart</url-pattern>
+  </servlet-mapping>
+
   <listener>
     <listener-class> gov.iti.jets.presentation.listeners.MyAppListener </listener-class>
-</listener>
+  </listener>
+  <listener>
+    <listener-class> gov.iti.jets.presentation.listeners.SessionListener </listener-class>
+  </listener>
 </web-app>
