--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,11 @@
   </servlet>
 
   <servlet>
+    <servlet-name>WishlistRemoveAjaxServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.ajaxservlet.WishlistRemoveAjaxServlet</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>AddCategoryServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.AddCategoryServlet</servlet-class>
   </servlet>
@@ -93,6 +98,11 @@
   <servlet-mapping>
     <servlet-name>WishlistAddAjaxServlet</servlet-name>
     <url-pattern>/wishlist</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>WishlistRemoveAjaxServlet</servlet-name>
+    <url-pattern>/wishlist-remove</url-pattern>
   </servlet-mapping>
 
   <servlet>
