update header ajax cart length

--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -79,7 +79,7 @@
   <servlet>
 
     <servlet-name>AddProductToCartServlet</servlet-name>
-    <servlet-class>gov.iti.jets.presentation.servlets.AddProductToCartServlet</servlet-class>
+    <servlet-class>gov.iti.jets.presentation.ajaxservlet.AddProductToCartAjaxServlet</servlet-class>
 
   </servlet>
 
