--- a/BodyCareProducts/pom.xml
+++ b/BodyCareProducts/pom.xml
@@ -127,6 +127,12 @@
 			<version>1.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+
 	</dependencies>
 
   <build>
