--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -199,6 +199,25 @@
     <url-pattern>/page-not-found</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>UserProfileServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.UserProfileServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UserProfileServlet</servlet-name>
+    <url-pattern>/userprofile</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UserUpdateProfileServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.UserUpdateProfileServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UserUpdateProfileServlet</servlet-name>
+    <url-pattern>/userupdateprofile</url-pattern>
+  </servlet-mapping>
+
 
   <servlet>
     <servlet-name>Home</servlet-name>
@@ -245,10 +264,10 @@
     <filter-class> gov.iti.jets.presentation.filters.inputvalidationfilters.RegisterPageFilter </filter-class>
   </filter>
 
-  <filter-mapping>
-    <filter-name> RegisterPageFilter </filter-name>
-    <url-pattern> /register </url-pattern>
-  </filter-mapping>
+<!--  <filter-mapping>-->
+<!--    <filter-name> RegisterPageFilter </filter-name>-->
+<!--    <url-pattern> /register </url-pattern>-->
+<!--  </filter-mapping>-->
 
 
   <filter>
