--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -232,6 +232,16 @@
     <url-pattern>/loadusers</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>ViewProductControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.ViewProductControllerServlet</servlet-class>
+
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ViewProductControllerServlet</servlet-name>
+    <url-pattern>/product</url-pattern>
+  </servlet-mapping>
 
   <!-- Validate otpc controller servlet -->
   <servlet>
