--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,9 @@
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
-                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" 
-        version="5.0" metadata-complete="true">
-  
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                      https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+  version="5.0" metadata-complete="true">
+
   <!-- Add Category Servlet -->
   <servlet>
     <servlet-name>AddCategoryServlet</servlet-name>
@@ -16,7 +16,7 @@
   </servlet-mapping>
 
 
-<!-- Add product Servlet -->
+  <!-- Add product Servlet -->
   <servlet>
     <servlet-name>AddProductServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.AddProductControllerServlet</servlet-class>
@@ -35,8 +35,8 @@
   </servlet>
 
   <servlet-mapping>
-      <servlet-name>CheckoutControllerServlet</servlet-name>
-      <url-pattern>/checkout</url-pattern>
+    <servlet-name>CheckoutControllerServlet</servlet-name>
+    <url-pattern>/checkout</url-pattern>
   </servlet-mapping>
 
 
@@ -52,7 +52,7 @@
   </servlet-mapping>
 
 
-<!-- Load contact message servlet -->
+  <!-- Load contact message servlet -->
   <servlet>
     <servlet-name>LoadContactMessagesServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.ContactMessagesLoadControllerServlet</servlet-class>
@@ -95,8 +95,8 @@
   </servlet>
 
   <servlet-mapping>
-      <servlet-name>Home</servlet-name>
-      <url-pattern>/home</url-pattern>
+    <servlet-name>Home</servlet-name>
+    <url-pattern>/home</url-pattern>
   </servlet-mapping>
 
 
@@ -112,7 +112,7 @@
   </servlet-mapping>
 
 
-<!-- Logout servlet -->
+  <!-- Logout servlet -->
   <servlet>
     <servlet-name>LogoutControllerServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.LogoutControllerServlet</servlet-class>
@@ -218,7 +218,7 @@
     <servlet-name>UpdatePasswordControllerServlet</servlet-name>
     <url-pattern>/updatepassword</url-pattern>
   </servlet-mapping>
-  
+
 
   <!-- User history load controller servlet -->
   <servlet>
@@ -267,11 +267,11 @@
     <servlet-name>WishlistControllerServlet</servlet-name>
     <url-pattern>/wishlist</url-pattern>
   </servlet-mapping>
-  
-  
-<!--  User profile update servlet  -->
-  
-    <servlet>
+
+
+  <!--  User profile update servlet  -->
+
+  <servlet>
     <servlet-name>UserProfileServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.servlets.UserProfileServlet</servlet-class>
   </servlet>
@@ -303,7 +303,7 @@
   </servlet-mapping>
 
 
-<!-- Check email controller servlet -->
+  <!-- Check email controller servlet -->
   <servlet>
     <servlet-name>CheckEmailAjaxServlet</servlet-name>
     <servlet-class>gov.iti.jets.presentation.ajaxservlet.CheckEmailAjaxServlet</servlet-class>
@@ -362,7 +362,7 @@
     <url-pattern>/wishlist-add</url-pattern>
   </servlet-mapping>
 
-  
+
   <!-- Wishlist remove ajax servlet -->
   <servlet>
     <servlet-name>WishlistRemoveAjaxServlet</servlet-name>
@@ -382,8 +382,8 @@
   </servlet>
 
   <servlet-mapping>
-      <servlet-name>BeforeHomePageServlet</servlet-name>
-      <url-pattern>/beforeHome</url-pattern>
+    <servlet-name>BeforeHomePageServlet</servlet-name>
+    <url-pattern>/beforeHome</url-pattern>
   </servlet-mapping>
 
 
@@ -394,13 +394,13 @@
   </servlet>
 
   <servlet-mapping>
-      <servlet-name>CartPage</servlet-name>
-      <url-pattern>/shopping-cart</url-pattern>
+    <servlet-name>CartPage</servlet-name>
+    <url-pattern>/shopping-cart</url-pattern>
   </servlet-mapping>
 
 
   <!-- Input validation filters -->
-  <filter>
+  <!-- <filter>
     <filter-name> LoginPageFilter </filter-name>
     <filter-class> gov.iti.jets.presentation.filters.inputvalidationfilters.LoginPageFilter </filter-class>
   </filter>
@@ -416,7 +416,7 @@
     <filter-name> RegisterPageFilter </filter-name>
     <filter-class> gov.iti.jets.presentation.filters.inputvalidationfilters.RegisterPageFilter </filter-class>
   </filter>
-
+ -->
 
   <!-- <filter-mapping>
     <filter-name> RegisterPageFilter </filter-name>
@@ -424,8 +424,7 @@
   </filter-mapping> -->
 
 
-
-  <filter>
+  <!-- <filter>
     <filter-name> AddCategoryPageFilter </filter-name>
     <filter-class> gov.iti.jets.presentation.filters.inputvalidationfilters.AddCategoryPageFilter  </filter-class>
   </filter>
@@ -456,7 +455,7 @@
     <filter-name> ContactPageFilter </filter-name>
     <url-pattern> /contact </url-pattern>
   </filter-mapping>
-  
+   -->
   <!-- Authentication filters -->
 
   <!-- <filter>
@@ -472,7 +471,6 @@
   <!-- Jsp pages filters -->
 
 
-  
   <!-- Listeners -->
   <listener>
     <listener-class> gov.iti.jets.presentation.listeners.MyAppListener </listener-class>
@@ -486,5 +484,5 @@
   <welcome-file-list>
     <welcome-file>beforeHome</welcome-file>
   </welcome-file-list>
- 
+
 </web-app>
