--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -119,7 +119,7 @@
 
 
   <!-- Home Page servlet -->
-  <servlet>
+  <!-- <servlet>
     <servlet-name>Home</servlet-name>
     <jsp-file>/home.jsp</jsp-file>
   </servlet>
@@ -127,7 +127,7 @@
   <servlet-mapping>
     <servlet-name>Home</servlet-name>
     <url-pattern>/home</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
 
 
   <!-- Login servlet -->
@@ -448,6 +448,15 @@
     <url-pattern>/empty-wishlist</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>HomeControllerServlet</servlet-name>
+    <servlet-class>gov.iti.jets.presentation.servlets.HomeControllerServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>HomeControllerServlet</servlet-name>
+    <url-pattern>/home</url-pattern>
+  </servlet-mapping>
 
   <!-- Befor home jsp -->
   <servlet>
