--- a/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
+++ b/BodyCareProducts/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
   <servlet-mapping>
     <servlet-name>AdminProductLoadControllerServlet</servlet-name>
-    <url-pattern>/admin/adminproducts</url-pattern>
+    <url-pattern>/adminproducts</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -90,7 +90,7 @@
 
   <servlet-mapping>
     <servlet-name>LoadContactMessagesServlet</servlet-name>
-    <url-pattern>/admin/loadcontactmessages</url-pattern>
+    <url-pattern>/loadcontactmessages</url-pattern>
   </servlet-mapping>
 
 
@@ -162,7 +162,7 @@
 
   <servlet-mapping>
     <servlet-name>OrderHistoryControllerServlet</servlet-name>
-    <url-pattern>/admin/order-history</url-pattern>
+    <url-pattern>/order-history</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -183,7 +183,7 @@
 
   <servlet-mapping>
     <servlet-name>UserOrderHistoryservlet</servlet-name>
-    <url-pattern>/order-history</url-pattern>
+    <url-pattern>/userorderhistory</url-pattern>
   </servlet-mapping>
 
   <!-- Page not found servlet -->
@@ -279,7 +279,7 @@
 
   <servlet-mapping>
     <servlet-name>LoadUsersServlet</servlet-name>
-    <url-pattern>/admin/loadusers</url-pattern>
+    <url-pattern>/loadusers</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -353,15 +353,7 @@
   </servlet-mapping>
 
    <!-- User Order History -->
-   <servlet>
-    <servlet-name>UserOrderHistoryServlet</servlet-name>
-    <servlet-class>gov.iti.jets.presentation.servlets.UserOrderHistoryServlet</servlet-class>
-  </servlet>
 
-  <servlet-mapping>
-    <servlet-name>UserOrderHistoryServlet</servlet-name>
-    <url-pattern>/userorderhistory</url-pattern>
-  </servlet-mapping>
 
 
 
@@ -570,15 +562,36 @@
    -->
   <!-- Authentication filters -->
 
-  <!-- <filter>
-    <filter-name> JSPFilesFilter </filter-name>
-    <filter-class> gov.iti.jets.presentation.filters.authenticationfilters.JSPFilesFilter</filter-class>
-  </filter>
+<!--  <filter>-->
+<!--    <filter-name> JSPFilesFilter </filter-name>-->
+<!--    <filter-class> gov.iti.jets.presentation.filters.authenticationfilters.JSPFilesFilter</filter-class>-->
+<!--  </filter>-->
 
-  <filter-mapping>
-    <filter-name> JSPFilesFilter </filter-name>
-    <url-pattern> *.jsp </url-pattern>
-  </filter-mapping> -->
+<!--  <filter-mapping>-->
+<!--    <filter-name> JSPFilesFilter </filter-name>-->
+<!--    <url-pattern> *.jsp </url-pattern>-->
+<!--  </filter-mapping>-->
+
+
+<!--  <filter>-->
+<!--    <filter-name> AdminFilter </filter-name>-->
+<!--    <filter-class> gov.iti.jets.presentation.filters.authenticationfilters.AdminFilter</filter-class>-->
+<!--  </filter>-->
+
+<!--  <filter-mapping>-->
+<!--    <filter-name> AdminFilter </filter-name>-->
+<!--    <url-pattern> addproduct</url-pattern>-->
+<!--  </filter-mapping>-->
+
+<!--  <filter-mapping>-->
+<!--    <filter-name> AdminFilter </filter-name>-->
+<!--    <url-pattern> addcategory </url-pattern>-->
+<!--  </filter-mapping>-->
+
+<!--  <filter-mapping>-->
+<!--    <filter-name> AdminFilter </filter-name>-->
+<!--    <url-pattern> editproduct </url-pattern>-->
+<!--  </filter-mapping>-->
 
   <!-- Jsp pages filters -->
 
